# swagger.json
@@ -37,9 +37,168 @@
                         }
                         }
                     }
-                }
+                },
+                "responses": {
+                    "401": {
+                      "description": "Já existe um usuario com este email!"
+                    },
+                    "200": {
+                      "description": "Usuário cadastrado com sucesso!",
+                      "content": {
+                        "application/json": {
+                          "schema": {
+                            "type": "object",
+                            "$ref": "#/components/schemas/Usuario"
+                          }
+                        }
+                      }
+                    }
+                  }
             }
-        }
+        },
+        "/listar-usuarios": {
+            "get": {
+              "description": "Lista usuários cadastrados",
+              "summary": "Lista usuários cadastrados",
+              "tags": ["Usuarios"],
+              "responses": {
+                "401": {
+                    "description": "Não foi possível listar usuários cadastrados"
+                },
+                "200": {
+                  "description": "Ok",
+                  "content": {
+                    "application/json": {
+                      "schema": {
+                        "type": "object",
+                        "$ref": "#/components/schemas/Usuario"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "/atualizar-usuario": {
+            "put": {
+              "description": "atualiza usuários pelo ID",
+              "summary": "atualiza usuários pelo ID",
+              "tags": ["Usuarios"],
+              "parameters": [
+                {
+                  "name": "id",
+                  "in": "path",
+                  "description": "atualiza usuario pelo ID",
+                  "required": true
+                }
+              ],
+              "requestBody": {
+                "content": {
+                  "application/json": {
+                    "schema": {
+                      "$ref": "#/components/schemas/Usuario"
+                    },
+                    "examples": {
+                      "Usuario": {
+                        "value": {
+                          "tipo": "Admin",
+                          "nome": "Gabriel Torres",
+                          "email": "gabriel@gmail.com"
+                        }
+                      }
+                    }
+                  }
+                }
+              },
+              "responses": {
+                "401": {
+                    "description": "Não foi possível atualizar este usuário!"
+                },
+                "200": {
+                  "description": "Ok",
+                  "content": {
+                    "application/json": {
+                      "schema": {
+                        "type": "object",
+                        "$ref": "#/components/schemas/Usuario"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+        "/deleta-usuario/{id}": {
+            "delete": {
+                "description":"Deleta usuários pelo ID",
+                "summary":"Deleta usuários pelo ID",
+                "tags":["Usuarios"]
+
+            }
+        },
+        "/cadastrar-produto":{
+            "post":{
+                "description":"Cadastra novos produtos",
+                "summary":"Cadastra novos usuários",
+                "tags":["Produtos"],
+                "requestBody": {
+                    "content":{
+                        "application/json":{
+                            "schema": {
+                                "$ref":"#/components/schemas/Produto"
+                            },
+                        "examples":{
+                            "produto":{
+                                "value":{
+                                    "nome":"Sabão em pó",
+                                    "descricao":"Usado para lavar roupas"
+                                }
+                            }
+                        }
+                    }
+                    }
+                },
+                "responses": {
+                    "200": {
+                      "description": "Produto cadastrado com sucesso"
+                    },
+                    "401": {
+                      "description": "Já existe um produto cadastrado!",
+                      "content": {
+                        "application/json": {
+                          "schema": {
+                            "type": "object",
+                            "$ref": "#/components/schemas/Produto"
+                          }
+                        }
+                      }
+                    }
+                  }
+            }
+        },
+        "listar-produtos":{
+            "get":{
+                "description":"Lista todos os produtos cadastrados",
+                "summary":"Lista todos os produtos cadastrados",
+                "tags":["Produtos"],
+                "responses": {
+                    "4001": {
+                      "description": "Não há produtos para listar"
+                    },
+                    "401": {
+                      "description": "Sucesfull!",
+                      "content": {
+                        "application/json": {
+                          "schema": {
+                            "type": "object",
+                            "$ref": "#/components/schemas/Produto"
+                          }
+                        }
+                      }
+                    }
+                  }
+            }   
+    }
     },
     "components": {
         "schemas":{
@@ -59,7 +218,23 @@
                         "type":"string"
                     }
                 }
+            },
+            "Produto": {
+                "type":"object",
+                "properties":{
+                    "nome":{
+                        "type":"string"
+                    },
+                    "id":{
+                        "type":"string"
+                    },
+                    "descricao":{
+                        "type":"string"
+                    }
+                }
             }
         }
+       
+     
     }
 }
